[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "Huevanta"
version         = "0.1.0"
description = "Rose Pine, Dracula, Palenight — 20 variants x 20 unique colours for Matplotlib & Seaborn"
readme = {file = "README.md", content-type = "text/markdown"}
license         = { text = "MIT" }
requires-python = ">=3.10"
authors         = [{ name = "Jahid Hasan" }]
keywords        = [
    "matplotlib", "seaborn", "theme", "plotting",
    "dracula", "rose-pine", "palenight",
    "visualization", "dark-theme", "color-palette",
]
dependencies    = ["matplotlib>=3.5"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
seaborn = ["seaborn>=0.12"]
dev     = ["pytest>=7", "twine>=4", "build>=1"]

[project.urls]
Homepage   = "https://github.com/msjahid/Huevanta"
Repository = "https://github.com/msjahid/Huevanta"
Issues     = "https://github.com/msjahid/Huevanta/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["huevanta*"]

[tool.setuptools.package-data]
huevanta = ["fonts/*.ttf", "fonts/*.otf"]